--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
   <!-- CSS global -->
+  <link rel="stylesheet" href="{% static 'css/base.css' %}">
   <link rel="stylesheet" href="{% static 'css/index.css' %}">
   <link rel="stylesheet" href="{% static 'css/metas_usuario.css' %}">
 
@@ -61,7 +62,7 @@
   </main>
 
   <!-- Footer -->
-  <footer class="text-center py-4 bg-light mt-5">
+  <footer class="text-center py-4 footer-custom">
     <div class="container">
       <div class="row">
         <div class="col-md-3"><strong>Lume</strong><br>© 2025 Lume</div>
