--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -1,9 +1,28 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-  }
-  
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  background-color: #ffffff !important; /* verde bem claro */
+}
+
+/* Faz o conteúdo ocupar todo espaço entre navbar e footer */
+main {
+  flex: 1 0 auto;
+}
+
+/* Footer fixo ao final da página */
+footer {
+  flex-shrink: 0;
+  background-color: #dfffdf !important; /* Verde levemente mais escuro */
+  color: #222 !important;
+}
+
+footer a, footer strong {
+  color: rgb(0, 0, 0) !important;
+}
+
   .navbar {
     background: #333;
     padding: 10px;
