--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -6,6 +6,15 @@ body {
   color: #222;
   font-size: 20px;
 }
+.jumbotron-custom {
+  background-color: #ffffff; /* branco */
+  color: #222;
+  padding: 3rem 2rem;
+  border-radius: 12px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+  margin-bottom: 2rem;
+}
+
 
 /* === MENU === */
 .navbar {
