--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,12 +5,13 @@
 
 {% block content %}
 <div class="container mt-5">
-  <div class="jumbotron text-center">
+  <div class="jumbotron-custom text-center">
     <h1 class="display-4">{{ frase }}</h1>
     <p class="lead">Esta é a página inicial do Lume</p>
     <p class="lead">Seja Bem Vindo(A)</p>
   </div>
 </div>
+
 
 <div class="container my-5">
   <div class="row justify-content-center text-center">
@@ -25,7 +26,7 @@
           </div>
         </div>
       </a>
-    </div>
+    </div> 
 
     <div class="col-md-3 mb-4">
       <a href="{% if user.is_authenticated %}{% url 'diario' %}{% else %}{% url 'auth' %}{% endif %}"
