--- a/app/templates/auth.html
+++ b/app/templates/auth.html
@@ -17,7 +17,7 @@
 
     <!-- PAINEL DE LOGIN -->
     <div id="pane-login" class="pane">
-      <form method="post" action="">
+      <form method="post" action="{% url 'auth' %}?tipo=login">
         {% csrf_token %}
         {{ login_form.username|as_crispy_field }}
         {{ login_form.password|as_crispy_field }}
@@ -28,7 +28,7 @@
 
     <!-- PAINEL DE CADASTRO -->
     <div id="pane-cadastro" class="pane hidden">
-      <form method="post" action="">
+      <form method="post" action="{% url 'auth' %}?tipo=cadastro">
         {% csrf_token %}
         {{ cadastro_form.username|as_crispy_field }}
         {{ cadastro_form.password|as_crispy_field }}
