--- a/app/static/css/metas_usuario.css
+++ b/app/static/css/metas_usuario.css
@@ -406,3 +406,16 @@
     background: #81c784;
     opacity: 1;
 }
+
+.pontos-usuario {
+    background-color: #f9f9ff;
+    border: 2px solid #d6e0ff;
+    border-radius: 15px;
+    padding: 15px;
+    margin-bottom: 25px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+}
+.pontos-usuario h4 {
+    color: #4a6cff;
+    font-weight: 600;
+}
